--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
 					}
 				}
 
-				resetTimer(partMoving, 3000);
+				resetTimer(patternMovement, 3000);
 				resetTimer(partMoving, 5000);
 				resetTimer(directionMoving, 5000);
 
