--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
 
 
 				let timeoutIds = {}; // Object to store timeout IDs for different variables
-				resetTimer(partMoving, 5000);
+				console.log(resetTimer(partMoving, 5000));
 				resetTimer(directionMoving, 5000);
 
 				// Function to set a variable to "none" after 3 seconds of inactivity
