--- a/index.html
+++ b/index.html
@@ -561,15 +561,19 @@
 								displayText(patternMovement);
 								// Clear the buffer after a match
 								movementBuffer = [];
-								patternMovement= "none";
-								partMoving = "none";
-								directionMoving = "none";
+								setTimeout(resetVariables, 3000); // 3000 milliseconds = 3 seconds
 								return;
 							}
 						}
 					} catch (error) {
 						console.error(error);
 					}
+				}
+
+				function resetVariables() {
+					directionMoving = "none";
+					partMoving = "none";
+					patternMovement = "none";
 				}
 
 				// function setPatternMovementToNone() {
