Removed displayText from pattern movement. Keeps audio.

--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
 								success_Sound.play();
 								console.log(`Pattern matched: ${pattern.patternName}`);
 								patternMovement = pattern.patternName;
-								displayText(patternMovement);
+								//displayText(patternMovement);
 								// Clear the buffer after a match
 								movementBuffer = [];
 								setTimeout(resetVariables, 4000); // 3000 milliseconds = 3 seconds
