--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
 					fullMessage = message;
 
 					// Check if speaking is true, if so, exit early.
-					if (speaking || !isConnected) {
+					if (speaking) {
 						return;
 					}
 
