--- a/index.html
+++ b/index.html
@@ -158,11 +158,13 @@
 				function checkVariables() {
 					// Check if latitude, longitude, and weatherDescription are not null
 					if (latitude !== null && longitude !== null) {
-						fetchStreetName().then((name) => {
-							streetName = name;
-							connectButton.disabled = false;
-							displayText("Ready to connect to Avatar BT");
-							});
+						connectButton.disabled = false;
+						displayText("Ready to connect to Avatar BT");
+						//fetchStreetName().then((name) => {
+						//	streetName = name;
+						//	connectButton.disabled = false;
+						//	displayText("Ready to connect to Avatar BT");
+						//	});
 					} else {
 						// If any variable is still null, wait for a short delay and check again
 						setTimeout(checkVariables, 1000); // Adjust delay as needed (here 1000 milliseconds or 1 second)
