--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
 				var previousLongitude;
 				var previousPartMoving;
 				var previousDirectionMoving;
-				var timeOfDay = getTimeOfDay();
+				var timeOfDay;
 
 				var fullMessage;
 
