--- a/index.html
+++ b/index.html
@@ -49,20 +49,20 @@
 				let tagSource = null;
 				let checkpointsSource = 'points.json';
 
-				var alert_Sound = new Howl({src: ['audio/alert_high-intensity.mp3'],
-				onloaderror: function(error) {console.error('Error loading audio:', error);},});
+				// var alert_Sound = new Howl({src: ['audio/alert_high-intensity.mp3'],
+				// onloaderror: function(error) {console.error('Error loading audio:', error);},});
 
-				var success_Sound = new Howl({src: ['audio/navigation_selection-complete-celebration.mp3'],
-				onloaderror: function(error) {console.error('Error loading audio:', error);},});
+				// var success_Sound = new Howl({src: ['audio/navigation_selection-complete-celebration.mp3'],
+				// onloaderror: function(error) {console.error('Error loading audio:', error);},});
 
-				var connecting_Sound = new Howl({src: ['audio/ui_loading.mp3'],
-				onloaderror: function(error) {console.error('Error loading audio:', error);},});
+				// var connecting_Sound = new Howl({src: ['audio/ui_loading.mp3'],
+				// onloaderror: function(error) {console.error('Error loading audio:', error);},});
 
-				var barking_Sound = new Howl({src: ['audio/barking.mp3'],
-				onloaderror: function(error) {console.error('Error loading audio:', error);},});
+				// var barking_Sound = new Howl({src: ['audio/barking.mp3'],
+				// onloaderror: function(error) {console.error('Error loading audio:', error);},});
 
-				var talking_Sound = new Howl({src: ['audio/talking.mp3'],
-				onloaderror: function(error) {console.error('Error loading audio:', error);},});
+				// var talking_Sound = new Howl({src: ['audio/talking.mp3'],
+				// onloaderror: function(error) {console.error('Error loading audio:', error);},});
 
 				async function connectToDevice() {
 					try {
