--- a/index.html
+++ b/index.html
@@ -20,6 +20,25 @@
 		</div>
 		<div id="avatarBTdiv">
 			<script>
+				async function initializeSounds() {
+					try {
+						const sounds = await fetchJSONFile('sounds.json', window.sounds); // Load JSON file
+						if (sounds) {
+						for (var key in sounds) {
+							if (sounds.hasOwnProperty(key)) {
+							window[key] = new Howl({
+								src: [sounds[key].src],
+								onloaderror: function(error) { console.error('Error loading audio:', error); }
+							});
+							}
+						}
+						} else {
+						console.error('Failed to load sounds.');
+						}
+					} catch (error) {
+						console.error('Error initializing sounds:', error);
+					}
+				}
 				initializeSounds();
 			</script>
 			<!-- Connect Button. -->
@@ -901,25 +920,25 @@
 					}
 				}
 
-				async function initializeSounds() {
-					try {
-						const sounds = await fetchJSONFile('sounds.json', window.sounds); // Load JSON file
-						if (sounds) {
-						for (var key in sounds) {
-							if (sounds.hasOwnProperty(key)) {
-							window[key] = new Howl({
-								src: [sounds[key].src],
-								onloaderror: function(error) { console.error('Error loading audio:', error); }
-							});
-							}
-						}
-						} else {
-						console.error('Failed to load sounds.');
-						}
-					} catch (error) {
-						console.error('Error initializing sounds:', error);
-					}
-				}
+				// async function initializeSounds() {
+				// 	try {
+				// 		const sounds = await fetchJSONFile('sounds.json', window.sounds); // Load JSON file
+				// 		if (sounds) {
+				// 		for (var key in sounds) {
+				// 			if (sounds.hasOwnProperty(key)) {
+				// 			window[key] = new Howl({
+				// 				src: [sounds[key].src],
+				// 				onloaderror: function(error) { console.error('Error loading audio:', error); }
+				// 			});
+				// 			}
+				// 		}
+				// 		} else {
+				// 		console.error('Failed to load sounds.');
+				// 		}
+				// 	} catch (error) {
+				// 		console.error('Error initializing sounds:', error);
+				// 	}
+				// }
 
 				function setupColors() {
 					lineColors[0] = color(204, 204, 0); // Dark Yellow
