--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 	</head>
 	<body>
+		<!-- Console output-->
+		<div id="consoleOutput"></div>
+		<div id="logoSpace">
+			<img class="logo" src="logo.svg" alt="Logo" />
+		</div>
+		<div id="avatarBTdiv">
+			<!-- Connect Button. -->
+			<button id="connectButton" class="button" disabled onclick="connecting_Sound.play(), wakeLock(), displayText('')">
+				<span class="material-icons" style="vertical-align: middle;">bluetooth_searching</span> Connect to Avatar
+			</button>
+		</div>
+		<!-- Div to display status of Avatar BT shop -->
+		<div id="closestShop"></div>
+		<!-- Coordinates-->
+		<div id="currentLocation"></div>
+		<!-- Movement>-->
+		<div id="messageDisplayDiv"></div>
 		<script>
 				//Script for pairing with Avatar_BT
 				let characteristic;
@@ -37,8 +54,8 @@
 				// var success_Sound = new Howl({src: ['audio/navigation_selection-complete-celebration.mp3'],
 				// onloaderror: function(error) {console.error('Error loading audio:', error);},});
 
-				// var connecting_Sound = new Howl({src: ['audio/ui_loading.mp3'],
-				// onloaderror: function(error) {console.error('Error loading audio:', error);},});
+				var connecting_Sound = new Howl({src: ['audio/ui_loading.mp3'],
+				onloaderror: function(error) {console.error('Error loading audio:', error);},});
 
 				// var barking_Sound = new Howl({src: ['audio/barking.mp3'],
 				// onloaderror: function(error) {console.error('Error loading audio:', error);},});
@@ -71,6 +88,7 @@
 								movePatterns = 'hachi_patterns.json';
 								sentenceSource = 'hachi_sentences.json';
 								tagSource = 'tags.json';
+								initializeSounds();
 							} else {
 								console.log("Loading settings for Avatar_BT");
 								labels = ["LEFT FOREARM", "LEFT SHOULDER", "HEAD", "RIGHT SHOULDER", "RIGHT FOREARM", "WAIST", "LEFT LEG", "RIGHT LEG"];
@@ -78,6 +96,7 @@
 								movePatterns = 'avatar_patterns.json';
 								sentenceSource = 'avatar_sentences.json';
 								tagSource = 'tags.json';
+								initializeSounds();
 							}
 							// Listen for characteristic value changes
 							characteristic.addEventListener("characteristicvaluechanged", handleCharacteristicValueChanged);
@@ -881,25 +900,25 @@
 					}
 				}
 
-				async function initializeSounds() {
-					try {
-						const sounds = await fetchJSONFile('sounds.json', window.sounds); // Load JSON file
-						if (sounds) {
-						for (var key in sounds) {
-							if (sounds.hasOwnProperty(key)) {
-							window[key] = new Howl({
-								src: [sounds[key].src],
-								onloaderror: function(error) { console.error('Error loading audio:', error); }
-							});
-							}
-						}
-						} else {
-						console.error('Failed to load sounds.');
-						}
-					} catch (error) {
-						console.error('Error initializing sounds:', error);
-					}
-				}
+				// async function initializeSounds() {
+				// 	try {
+				// 		const sounds = await fetchJSONFile('sounds.json', window.sounds); // Load JSON file
+				// 		if (sounds) {
+				// 		for (var key in sounds) {
+				// 			if (sounds.hasOwnProperty(key)) {
+				// 			window[key] = new Howl({
+				// 				src: [sounds[key].src],
+				// 				onloaderror: function(error) { console.error('Error loading audio:', error); }
+				// 			});
+				// 			}
+				// 		}
+				// 		} else {
+				// 		console.error('Failed to load sounds.');
+				// 		}
+				// 	} catch (error) {
+				// 		console.error('Error initializing sounds:', error);
+				// 	}
+				// }
 
 				function setupColors() {
 					lineColors[0] = color(204, 204, 0); // Dark Yellow
@@ -1061,25 +1080,5 @@
 			}, 2000);
 			readFromDatabase(); // Read data after writing
 		</script>
-		<!-- Console output-->
-		<div id="consoleOutput"></div>
-		<div id="logoSpace">
-			<img class="logo" src="logo.svg" alt="Logo" />
-		</div>
-		<div id="avatarBTdiv">
-			<script>
-				initializeSounds();
-			</script>
-			<!-- Connect Button. -->
-			<button id="connectButton" class="button" disabled onclick="window.connecting_Sound.play(), wakeLock(), displayText('')">
-				<span class="material-icons" style="vertical-align: middle;">bluetooth_searching</span> Connect to Avatar
-			</button>
-		</div>
-		<!-- Div to display status of Avatar BT shop -->
-		<div id="closestShop"></div>
-		<!-- Coordinates-->
-		<div id="currentLocation"></div>
-		<!-- Movement>-->
-		<div id="messageDisplayDiv"></div>
 	</body>
 </html>
