--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
 							}
 						});
 
-						// Check if partMoving or directionMoving are different from their previous values and add movement to the sequence buffer
+						// Check if partMoving or directionMoving are different from their previous values and add movement to the sequence buffer.
 						if (partMoving !== previousPart || directionMoving !== previousDirection) {
 							// Add movement to the sequence buffer
 							console.log(partMoving+" "+directionMoving);
