--- a/index.html
+++ b/index.html
@@ -645,6 +645,7 @@
 						return;
 					}
 					clearTimeout(timeoutID);
+					speakMessage(fullMessage);
 					updateDisplay(fullMessage);
 				}
 
@@ -653,7 +654,6 @@
 					try {
 						// Set the text content
 						messageDisplayDiv.textContent = fullMessage;
-						console.log(speakMessage(fullMessage));
 
 						// Check if message is not empty to show the overlay
 						messageDisplayDiv.style.display = fullMessage.trim() !== "" ? "block" : "none";
