--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				let partMoving = "none";
 				let directionMoving = "none";
 				let patternMovement ="none";
-				var blueToothStatus = "Avatar Offline";
+				var blueToothStatus = "Offline";
 				var streetName = "Unknown";
 				var deviceName ="";
 				let labels = ["EMPTY","EMPTY","EMPTY","EMPTY","EMPTY","EMPTY","EMPTY","EMPTY",];
@@ -114,7 +114,7 @@
 							isConnected = true;
 							setTimeout(function() {
 								startDetectMovement = true;
-								blueToothStatus = "Avatar Online";
+								blueToothStatus = "Online";
 							}, 4000);
 						} else {
 							// Disconnect from the device
@@ -126,7 +126,7 @@
 							setTimeout(function() {
 								startDetectMovement = false;
 								potValues = [0, 0, 0, 0, 0, 0, 0, 0, 0];
-								blueToothStatus = "Avatar Offline";
+								blueToothStatus = "Offline";
 							}, 4000);
 						}
 					} catch (error) {
@@ -953,6 +953,7 @@
 						const partMovementVar = (deviceName === 'hachi_BT') ? 'hachi_part_mov' :'avatar_part_mov' ;
 						const dirMovementVar = (deviceName === 'hachi_BT') ? 'hachi_part_dir' :'avatar_part_dir' ;
 						const tagInteractionVar = (deviceName === 'hachi_BT') ? 'hachi_tag' :'avatar_tag' ;
+						const statusVar = (deviceName === 'hachi_BT') ? 'hachi_status' :'avatar_status' ;
 
 			            // Write variables to the database
 			            update(ref(database, databaseName), {
@@ -965,6 +966,7 @@
 							[partMovementVar]: partMoving,
 							[dirMovementVar]: directionMoving,
 							[tagInteractionVar]: tagID,
+							[statusVar]: blueToothStatus,
 			            }).then(() => {
 			                //console.log("Variables written to the database successfully!");
 			            }).catch((error) => {
