--- a/index.html
+++ b/index.html
@@ -966,7 +966,7 @@
 							[partMovementVar]: partMoving,
 							[dirMovementVar]: directionMoving,
 							[tagInteractionVar]: tagID,
-							[statusVar]: blueToothStatus,
+							[statusVar]: blueToothStatus
 			            }).then(() => {
 			                //console.log("Variables written to the database successfully!");
 			            }).catch((error) => {
